tests/integration/text_document/snapshots/integration__text_document__formatting__bibtex_internal_command.snap
---
source: tests/integration/text_document/formatting.rs
assertion_line: 96
expression: "format(r#\"\n%BIB main.bib\n%SRC @article{foo, bar = \"\\baz\",}\"#)?"
---
@article{foo,
    bar = "\baz",
}

