tests/integration/text_document/snapshots/integration__text_document__formatting__bibtex_internal_insert_braces.snap
---
source: tests/integration/text_document/formatting.rs
assertion_line: 85
expression: "format(r#\"\n%BIB main.bib\n%SRC @article{foo, bar = baz,\"#)?"
---
@article{foo,
    bar = baz,
}
