tests/integration/text_document/snapshots/integration__text_document__formatting__bibtex_internal_parens.snap
---
source: tests/integration/text_document/formatting.rs
assertion_line: 118
expression: "format(r#\"\n%BIB main.bib\n%SRC @article(foo,)\"#)?"
---
@article{foo,
}

