tests/integration/text_document/snapshots/integration__text_document__formatting__bibtex_internal_string.snap
---
source: tests/integration/text_document/formatting.rs
assertion_line: 129
expression: "format(r#\"\n%BIB main.bib\n%SRC @string{foo=\"bar\"}\"#)?"
---
@string{foo = "bar"}

